Fixed animation. UI alignment now broken though

--- a/css/containers.css
+++ b/css/containers.css
@@ -42,6 +42,13 @@
     /* display: none; */
 }
 
+#cards-container,
+#nav-container {
+  opacity: 0;
+  transform: translateY(20px);
+}
+
+
 #welcome-container h1 {
     font-size: 2.5rem;
     margin-bottom: 1rem;
